--- a/CloneClass/CloneClass.vcxproj
+++ b/CloneClass/CloneClass.vcxproj
@@ -150,15 +150,13 @@
     <ClCompile Include="include\Exception.h" />
     <ClCompile Include="include\fileHelper.h" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="src\date.cpp" />
     <ClCompile Include="src\log.cpp" />
-    <ClCompile Include="src\string.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\date.h" />
     <ClInclude Include="include\log.h" />
     <ClInclude Include="include\logger.h" />
-    <ClInclude Include="include\string.h" />
+    <ClInclude Include="include\Timer.h" />
+    <ClInclude Include="include\utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
