--- a/CloneClass/CloneClass.vcxproj.filters
+++ b/CloneClass/CloneClass.vcxproj.filters
@@ -21,12 +21,6 @@
     <ClCompile Include="include\Exception.h">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\string.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\date.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -38,13 +32,13 @@
     <ClInclude Include="include\log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\date.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\string.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
